--- a/app/src/main/res/layout/activity_reproductor.xml
+++ b/app/src/main/res/layout/activity_reproductor.xml
@@ -28,6 +28,16 @@
             android:layout_marginTop="16dp"/>
 
         <TextView
+            android:id="@+id/txtPosicionAlbum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1 / 1"
+            android:textSize="14sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="4dp"/>
+
+
+        <TextView
             android:id="@+id/txtArtista"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,6 +50,33 @@
             android:id="@+id/seekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
+
+            <TextView
+                android:id="@+id/txtTiempoActual"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:layout_weight="1"
+                android:textSize="14sp"
+                android:paddingStart="4dp" />
+
+            <TextView
+                android:id="@+id/txtDuracionTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:layout_gravity="end"
+                android:textSize="14sp"
+                android:paddingEnd="4dp" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:orientation="horizontal"
